--- a/book/ch2/先决条件.md
+++ b/book/ch2/先决条件.md
@@ -1,9 +1,9 @@
-### .0.ÏÈ¾öÌõ¼þ
+### .0.å…ˆå†³æ¡ä»¶
     
-    * ·­Ç½
-    * ·­Ç½
-    * ·­Ç½
+    * ç¿»å¢™
+    * ç¿»å¢™
+    * ç¿»å¢™
     
-¡¡¡¡1.5ÒÔÉÏ°æ±¾µÄJDK,Gradle»á²ÉÓÃÄã»·¾³±äÁ¿ÖÐÉèÖÃµÄJDKÄ¿Â¼(¿ÉÒÔÓÃjava -version½øÐÐ¼ì²é),ÄãÐèÒªÅäÖÃ»·¾³±äÁ¿ JAVA_HOME ²¢½«ËüÖ¸ÏòÄãµÄJDK°²×°Ä¿Â¼.
+ã€€ã€€1.5ä»¥ä¸Šç‰ˆæœ¬çš„JDK,Gradleä¼šé‡‡ç”¨ä½ çŽ¯å¢ƒå˜é‡ä¸­è®¾ç½®çš„JDKç›®å½•(å¯ä»¥ç”¨java -versionè¿›è¡Œæ£€æŸ¥),ä½ éœ€è¦é…ç½®çŽ¯å¢ƒå˜é‡ JAVA_HOME å¹¶å°†å®ƒæŒ‡å‘ä½ çš„JDKå®‰è£…ç›®å½•.
 
-¡¡¡¡p.s:Gradle×Ô´øÁËGroovy¿â,ËùÒÔÎÞÐèÊÂÏÈ°²×°Grvoovy,ËùÓÐÒÑ¾­°²×°µÄGrvooyÒ²½«±»GradleºöÂÔ.
+ã€€ã€€p.s:Gradleè‡ªå¸¦äº†Groovyåº“,æ‰€ä»¥æ— éœ€äº‹å…ˆå®‰è£…Grvoovy,æ‰€æœ‰å·²ç»å®‰è£…çš„Grvooyä¹Ÿå°†è¢«Gradleå¿½ç•¥.
