--- a/book/ch5/1.依赖的坐标.md
+++ b/book/ch5/1.依赖的坐标.md
@@ -1,4 +1,4 @@
-#### 仓库的坐标
+#### 依赖的坐标
 　　仓库中构件（jar包）的坐标是由`groupId、artifactId、version`组成的字符串构成的，在仓库中通过以GAV组成的坐标来定位所需的jar包.在gradle中可以通过以下方式来声明依赖:   
 　　```testCompile group: 'junit', name: 'junit', version: '4.0'```    
   
