章节内容更新

--- a/book/ch5/0.什么是依赖管理.md
+++ b/book/ch5/0.什么是依赖管理.md
@@ -23,3 +23,19 @@
 compile 'org.springframework:spring-core:4.3.0.RELEASE'
 ```
 　　是的，你只需要一行代码即可完成maven用3行代码完成的事情（当然如果你要说去掉换行也可以达到一行效果的话，那我就无言以对了）
+#### 自动化依赖管理带来的优势
+　　可以看到，采用自动化依赖管理后，我们只需要在脚本文件里按照相应的规范书写依赖标识即可轻松完成依赖的管理。
+  
+- 构建工具会依据你所配置的仓库去搜寻所需依赖，并将这些依赖缓存到本地便于其它项目使用，对，便于其它项目使用，也就是说完全相同的依赖你的磁盘只需要存在一份就可以了。
+- 采用自动化依赖管理带来的好处就是，无需关心依赖所需的其它依赖（即传递性依赖），比如hibernate-core又依赖了dom4j，那么无需配置dom4j，构建工具会自动发现传递性依赖并将这些传递性依赖一并下载到本地磁盘。
+- 采用自动化依赖管理，可以方便的对依赖版本进行管理，需要升级的时候只需要改一下脚本中的版本号即可，也可以通过定义版本号变量的形式，使多个依赖引用这一变量，做到版本号的统一控制。
+  
+**采用变量统一控制版本号**
+```groovy
+dependencies {
+	def bootVersion = "1.3.5.RELEASE"
+    compile     "org.springframework.boot:spring-boot-starter-web:${bootVersion}",  
+                "org.springframework.boot:spring-boot-starter-data-jpa:${bootVersion}",
+                "org.springframework.boot:spring-boot-starter-tomcat:${bootVersion}"
+}
+```
