格式化代码

--- a/book/ch5/2.依赖的传递与排除.md
+++ b/book/ch5/2.依赖的传递与排除.md
@@ -12,7 +12,7 @@
 可以通过configuration配置或者在依赖声明时添加`exclude`的方式来排除指定的引用。
 
 exclude可以接收group和module两个参数，这两个参数可以单独使用也可以搭配使用，其中module可以理解为对应GAV中的artifactId，也就是`compile group: 'org.gradle.test.classifiers', name: 'service', version: '1.0'`中的中间name部分。
-```
+```groovy
 configurations {
 	//编译期排除commons模块
     compile.exclude module: 'commons'
