依赖管理章节更新

--- a/book/ch5/0.什么是依赖管理.md
+++ b/book/ch5/0.什么是依赖管理.md
@@ -30,6 +30,7 @@ compile 'org.springframework:spring-core:4.3.0.RELEASE'
 - 采用自动化依赖管理带来的好处就是，无需关心依赖所需的其它依赖（即传递性依赖），比如hibernate-core又依赖了dom4j，那么无需配置dom4j，构建工具会自动发现传递性依赖并将这些传递性依赖一并下载到本地磁盘。
 - 采用自动化依赖管理，可以方便的对依赖版本进行管理，需要升级的时候只需要改一下脚本中的版本号即可，也可以通过定义版本号变量的形式，使多个依赖引用这一变量，做到版本号的统一控制。
   
+比如下面两个示例 仅需很少的代码即可替代传统方式大量的工作量。
 **采用变量统一控制版本号**
 ```groovy
 dependencies {
@@ -37,5 +38,14 @@ dependencies {
     compile     "org.springframework.boot:spring-boot-starter-web:${bootVersion}",  
                 "org.springframework.boot:spring-boot-starter-data-jpa:${bootVersion}",
                 "org.springframework.boot:spring-boot-starter-tomcat:${bootVersion}"
+}
+```
+
+**自动获取最新版本依赖**
+如果你想某个库每次构建时都检查是否有新版本，那么可以采用`+`来让Gradle在每次构建时都检查并应用最新版本的依赖。当然也可以采用`1.x`,`2.x`的方式来获取某个大版本下的最新版本。
+
+```groovy
+dependencies {
+	compile     "org.springframework.boot:spring-boot-starter-web:+"
 }
 ```
