依赖分类章节更新

--- a/book/ch5/1.依赖的坐标和范围.md
+++ b/book/ch5/1.依赖的坐标和范围.md
@@ -1,5 +1,5 @@
 #### 依赖的坐标
-　　仓库中构件（jar包）的坐标是由`groupId、artifactId、version`组成的字符串构成的，在仓库中通过以GAV组成的坐标来定位所需的jar包.在gradle中可以通过以下方式来声明依赖:   
+　　仓库中构件（jar包）的坐标是由`configurationName "group:name:version:classifier@extension" `组成的字符串构成的，在仓库中通过以GAV组成的坐标来定位所需的jar包.在gradle中可以通过以下方式来声明依赖:   
 　　```testCompile group: 'junit', name: 'junit', version: '4.0'```    
   
 　　这里前面的testCompile是声明依赖的的方位,如果不理解可以暂时忽略,后面会有章节讲到,当然如果你觉得这种方式太过繁琐,可以省略`group、name、version`三个单词,把构件的坐标采用以`:`分割的方式简写为如下方式.    
@@ -10,7 +10,9 @@
 　　或者简写为   
 　　```compile "org.gradle.test.classifiers:service:1.0:jdk14@jar"```   
   
- #### 依赖的范围
+  这是由于Gradle依赖配置支持多种方式的参数传递，map
+  
+ #### 依赖的配置
 | 名称 | 说明 |
 | --- | --- |
 | compileOnly | gradle2.12之后版本新添加的,2.12版本时期曾短暂的叫provided,后续版本已经改成了compileOnly,由java插件提供,适用于编译期需要而不需要打包的情况 |
