章节内容小修

--- a/book/ch5/1.依赖的坐标和范围.md
+++ b/book/ch5/1.依赖的坐标和范围.md
@@ -1,18 +1,37 @@
 #### 依赖的坐标
-　　仓库中构件（jar包）的坐标是由`configurationName "group:name:version:classifier@extension" `组成的字符串构成的，在仓库中通过以GAV组成的坐标来定位所需的jar包.在gradle中可以通过以下方式来声明依赖:   
+　　仓库中构件（jar包）的坐标是由`configurationName "group:name:version:classifier@extension" `组成的字符串构成，如同Maven中的`GAV`坐标，Gradle可借由此来定位你想搜寻的`jar`包。
+　　在gradle中可以通过以下方式来声明依赖:  
 　　```testCompile group: 'junit', name: 'junit', version: '4.0'```    
   
-　　这里前面的testCompile是声明依赖的的方位,如果不理解可以暂时忽略,后面会有章节讲到,当然如果你觉得这种方式太过繁琐,可以省略`group、name、version`三个单词,把构件的坐标采用以`:`分割的方式简写为如下方式.    
-　　```testCompile 'junit:junit:4.0'```   
+| 项目 | 描述 |
+|--------|--------|
+|    configurationName    |   依赖的作用范围，具体介绍看本章第二小节     |
+|group|通常用来描述组织、公司、团队或者其它有象征代表意义的名字，比如阿里就是`com.alibaba`，一个group下一般会有多个`artifact`|
+|name|依赖的名称，或者更直接来讲叫包名、模块、构件名、发布物名以及随便你怎么称呼。`druid`就是`com.alibaba`下的一个连接池库的名称|
+|version|见名知意，无它，版本号。|
+|classifier|类库版本，在前三项相同的情况下，如果目标依赖还存在对应不同JDK版本的版本，可以通过此属性指明|
+|extension| 依赖的归档类型，如`aar`、`jar`等，默认不指定的话是`jar`|
+	
+　　这是由于Gradle依赖配置支持多种书写方式，采用map或者字符串。
+ 
+  ```groovy
+  // 采用map描述依赖
+  testCompile group: 'junit', name: 'junit', version: '4.0'
+  ```    
   
-　　当然更细粒度的`classifier`这里也是支持的,需要你需要可以按如下方式书写   
-　　```compile group: 'org.gradle.test.classifiers', name: 'service', version: '1.0', classifier: 'jdk14'```   
-　　或者简写为   
-　　```compile "org.gradle.test.classifiers:service:1.0:jdk14@jar"```   
+  ```groovy
+  // 采用字符串方式描述依赖
+  testCompile 'junit:junit:4.0'
+  ```   
+　　显然采用字符串的方式更加简单直观，当然借助`groovy`语言强大的`GString`还可以对版本号进行抽离。如下面的示例，这里需要注意的是如果要用`GString`的话，依赖描述的字符串要用`""`双引号包起来才会生效。
+  ```groovy
+  def ver = "4.0"
+  testCompile "junit:junit:${ver}"
+  ```
   
-  这是由于Gradle依赖配置支持多种方式的参数传递，map
-  
- #### 依赖的配置
+ #### 依赖的范围
+上面的例子中采用的`testComplie`是声明依赖的作用范围，关于各种作用范围的功效可见下表。
+
 | 名称 | 说明 |
 | --- | --- |
 | compileOnly | gradle2.12之后版本新添加的,2.12版本时期曾短暂的叫provided,后续版本已经改成了compileOnly,由java插件提供,适用于编译期需要而不需要打包的情况 |
