--- a/book/ch5/2.依赖的分类.md
+++ b/book/ch5/2.依赖的分类.md
@@ -12,10 +12,19 @@
 可以通过如下方式声明外部依赖，Gradle支持通过map方式或者`g:a:v`的简写方式传入依赖描述，这些声明依赖会去配置的`repository`查找。
 ```groovy
 dependencies {
- // 采用map方式传入
+ // 采用map方式传入单个
   compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
+ // 采用map方式传入多个
+  compile(
+      [group: 'org.springframework', name: 'spring-core', version: '2.5'],
+      [group: 'org.springframework', name: 'spring-aop', version: '2.5']
+  )
   // 采用简写方式声明
   compile 'org.projectlombok:lombok:1.16.10' 
+  // 采用简写方式传入多个 
+  compile 'org.springframework:spring-core:2.5',
+          'org.springframework:spring-aop:2.5'
+ 
 }
 ```
 ### 项目依赖
@@ -55,8 +64,21 @@ dependencies {
 简单来说就是声明`依赖的依赖`或者`依赖的传递依赖`，一般情况下如果依赖的库并未用构建工具构建（尤其是一些上古时代的老库），那么Gradle是无法透过源文件去查找该库的传递性依赖的，通常而言，一个模块采用XML(POM文 件)来描述库的元数据和它的传递性依赖。Gradle可以借由此方式提供相同的能力。这里让`druid`连接池依赖了`ptj.tiger`的一个库。
 ```groovy
 dependencies {
+	// 让ptj.tiger作为druid的传递性依赖
 	compile module("com.alibaba:druid:1.0.26") {
     		dependency("cn.pkaq:ptj.tiger:+")
+    }
+    
+    runtime module("org.codehaus.groovy:groovy:2.4.7") {
+    	// 停用groovy依赖的commons-cli库的依赖传递
+        dependency("commons-cli:commons-cli:1.0") {
+            transitive = false
+        }
+        // 让groovy依赖的ant模块的依赖ant-launcher停用传递性依赖并依赖ant-junit..........
+        module(group: 'org.apache.ant', name: 'ant', version: '1.9.6') {
+            dependencies "org.apache.ant:ant-launcher:1.9.6@jar",
+                         "org.apache.ant:ant-junit:1.9.6"
+        }
     }
  }
 ```
