--- a/book/ch5/2.依赖的分类.md
+++ b/book/ch5/2.依赖的分类.md
@@ -60,8 +60,8 @@ dependencies {
    testCompile gradleTestKit()
  }
 ```
-### 模块依赖
-简单来说就是声明`依赖的依赖`或者`依赖的传递依赖`，一般情况下如果依赖的库并未用构建工具构建（尤其是一些上古时代的老库），那么Gradle是无法透过源文件去查找该库的传递性依赖的，通常而言，一个模块采用XML(POM文 件)来描述库的元数据和它的传递性依赖。Gradle可以借由此方式提供相同的能力。这里让`druid`连接池依赖了`ptj.tiger`的一个库。
+### 子模块依赖
+简单来说就是声明`依赖的依赖`或者`依赖的传递依赖`，一般情况下如果依赖的库并未用构建工具构建（尤其是一些上古时代的老库），那么Gradle是无法透过源文件去查找该库的传递性依赖的，通常而言，一个模块采用XML(POM文 件)来描述库的元数据和它的传递性依赖。Gradle可以借由此方式提供相同的能力，当然这种方式也会可以改写原有的传递性依赖。这里让`druid`连接池依赖了`ptj.tiger`的一个库。
 ```groovy
 dependencies {
 	// 让ptj.tiger作为druid的传递性依赖
