--- a/book/ch5/4.依赖的更新与缓存.md
+++ b/book/ch5/4.依赖的更新与缓存.md
@@ -3,10 +3,28 @@
 ```bash
 	gradle build --refresh-dependencies
 ```
+　　当远程仓库上传了相同版本依赖时，有时需要为缓存指定一个时效去检查远程仓库的依赖笨版本，Gradle提供了`cacheChangingModulesFor(int, java.util.concurrent.TimeUnit)` ,`cacheDynamicVersionsFor(int, java.util.concurrent.TimeUnit) `两个方法来设置缓存的时效
+```groovy
+configurations.all {
+	//每隔24小时检查远程依赖是否存在更新
+ 	resolutionStrategy.cacheChangingModulesFor 24, 'hours'
+	//每隔10分钟..
+    //resolutionStrategy.cacheChangingModulesFor 10, 'minutes'
+    // 采用动态版本声明的依赖缓存10分钟
+    resolutionStrategy.cacheDynamicVersionsFor 10*60, 'seconds'
+}
+
+dependencies {
+	// 添加changing: true
+    compile group: "group", name: "module", version: "1.1-SNAPSHOT", changing: true
+    //简写方式
+    //compile('group:module:1.1-SNAPSHOT') { changing = true }
+}
+```
 #### 缓存管理
 
 ##### 缓存位置管理
-　　Gradle在按照配置的仓库去搜寻下载依赖时，下载的依赖默认会缓存到USER_HOME/.gradle目录下，当然也可以手工修改这个位置。
+　　Gradle在按照配置的仓库去搜寻下载依赖时，下载的依赖默认会缓存到USER_HOME/.gradle/caches目录下，当然也可以手工修改这个位置。
 　　具体可以参考如下三种方式：
   
 - 通过添加系统变量 GRADLE_USER_HOME
@@ -14,7 +32,7 @@
 - 通过命令行-g或者 --gradle-user-home 参数设置 
 
 ##### 离线模式（总是采用缓存内容）
-　　Gradle提供了一种离线模式，可以让你构建时总是采用缓存的内容而无需去联网检查，这无疑是提高构建速度的一个好选择。开启离线模式只需要在执行命令时候添加`--offline`参数即可。当然，采用这种模式的也是有代价的，如果缓存中搜寻不到所需依赖会导致构建失败。
+　　Gradle提供了一种离线模式，可以让你构建时总是采用缓存的内容而无需去联网检查，如果你并未采用动态版本特性且可以确保项目中依赖的版本都已经缓存到了本地，这无疑是提高构建速度的一个好选择。开启离线模式只需要在执行命令时候添加`--offline`参数即可。当然，采用这种模式的也是有代价的，如果缓存中搜寻不到所需依赖会导致构建失败。
 ```bash
 	gradle build --offline
 ```
