更新idea插件的补充说明

--- a/book/ch5/1.依赖的坐标和范围.md
+++ b/book/ch5/1.依赖的坐标和范围.md
@@ -31,6 +31,7 @@
   
  #### 依赖的范围
 上面的例子中采用的`testComplie`是声明依赖的作用范围，关于各种作用范围的功效可见下表。
+> tip:这里需要注意的是,provided范围内的传递依赖也不会被打包
 
 | 名称 | 说明 |
 | --- | --- |
